<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#000000" >
  <LinearLayout android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:paddingLeft="20sp"
                android:paddingRight="20sp">
      <Button android:layout_width="0sp"
              android:layout_height="wrap_content"
              android:text="@string/you_got_text"
              android:layout_weight="0.3"
              android:id="@+id/btn_from"
              android:onClick="btn_from_click"
              android:textColor="#ffffff"
              />

      
      <Button 
              android:layout_width="0sp"
              android:layout_height="wrap_content"
              android:text="@string/you_get_text"
              android:layout_weight="0.3"
              android:id="@+id/btn_to"
              android:onClick="btn_to_click"
              android:textColor="#ffffff"/>
      
  </LinearLayout>
  
  <LinearLayout android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:gravity="center"
                android:paddingLeft="20sp"
                android:paddingRight="20sp" >
     <TextView android:layout_width="0sp"
              android:layout_height="wrap_content"
              android:layout_weight="0.3"
              android:text="@string/you_got_text"
              android:gravity="center"
              android:textColor="#ffffff"/>
     <EditText android:layout_width="0sp"
              android:layout_height="wrap_content"
              android:layout_weight="0.4"
              android:inputType="number"
               android:gravity="center"
               android:id="@+id/edt_from"
               android:textColor="#ffffff" />   
     <TextView android:layout_width="0sp"
              android:layout_height="wrap_content"
              android:layout_weight="0.3"
              android:text="@string/from"
              android:gravity="center"
              android:id="@+id/tv_from"
              android:textColor="#ffffff"/>    
  </LinearLayout>  
  
   <LinearLayout android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:gravity="center" 
                android:paddingLeft="20sp"
                android:paddingRight="20sp">
      
       <TextView android:layout_width="0sp"
              android:layout_height="wrap_content"
              android:layout_weight="0.3"
              android:text="@string/you_get_text"
               android:gravity="center"
               android:textColor="#ffffff"/>
       <EditText android:layout_width="0sp"
                 android:id="@+id/edt_to"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.4"
                 android:inputType="none"
                 android:gravity="center"
                android:textColor="#ffffff"
                android:clickable="false"
                android:editable="false"
                />   
       <TextView android:layout_width="0sp"
              android:id="@+id/tv_to"
              android:layout_height="wrap_content"
              android:layout_weight="0.3"
              android:text="@string/to"
              android:gravity="center"
              android:textColor="#ffffff"/>    
  </LinearLayout>
   <LinearLayout android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:gravity="center" 
                android:paddingLeft="20sp"
                android:paddingRight="20sp">
	   <TextView
	       android:id="@+id/textView1"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="@string/exchange_rate"
	       android:textAppearance="?android:attr/textAppearanceMedium"
	       android:textColor="#ffffff" />
	
	   <EditText
	       android:id="@+id/edt_exchange_rate"
	       android:layout_width="200sp"
	       android:layout_height="wrap_content"
	       android:ems="10"
	       android:gravity="center"
	       android:text="Rate"
	       android:textColor="#ffffff"
	       android:inputType="none">
	   </EditText>
	</LinearLayout>
</LinearLayout>